# xiaohui-ai

./: .env.example  .gitignore  AGENT-DESIGN-MVP.md  AGENT-DESIGN.md  BEGIN.md  Makefile  README.md
agents/: CONFIG_GUIDE.md  Makefile  README.md  config.py  demo.py  edges.py  graph.py  langgraph.json  pyproject.toml  state.py
agents/clients/: deepseek.py
agents/docs/: AI_NEED.md
agents/nodes/: chat.py  intent.py  sleep.py
agents/prompts/: __init__.py  analysis.py  chat.py  intent.py  recommendations.py  report.py  sleep.py
backend/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  test_crud.py
backend/api/: __init__.py  routes.py  schemas.py
backend/db/: __init__.py  models.py
backend/doc/: DATA_MODEL.md  DATA_MODEL_INITIAL.md
backend/service/: __init__.py  device_health_report.py
data-analysis/: sleep.md
