[project]
name = "xiaohui-agents"
version = "0.1.0"
description = "AI 养老监护平台 - Agent 服务"
requires-python = ">=3.10"

dependencies = [
    # AI 框架（遵循非必要不引入依赖原则）
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",  # 仅提供基础类型定义
    
    # 数据验证
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # 工具库
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.0.290",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
