[tool.poetry]
name = "xiaohui-backend"
version = "0.1.0"
description = "AI 养老监护平台 - 后端服务"
authors = ["Your Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# API 框架
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}

# 数据库
peewee = ">=3.16.0"
pymysql = ">=1.1.0"
redis = ">=5.0.0"

# 向量数据库
pymilvus = ">=2.3.0"

# AI 框架（遵循非必要不引入依赖原则）
langgraph = ">=0.1.0"
langchain-core = ">=0.1.0"  # 仅提供基础类型定义

# 数据验证
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"

# HTTP 客户端
httpx = ">=0.25.0"

# 工具库
python-dotenv = ">=1.0.0"
structlog = ">=23.0.0"  # 结构化日志

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
mypy = ">=1.5.0"
ruff = ">=0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
